--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -1037,12 +1037,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
    "metadata": {},
    "outputs": [],
    "source": [
     "#si-exercise\n",
+    "\n",
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -1050,38 +1051,96 @@
     "\n",
     "class RegressionModel:\n",
     "    \"\"\"\n",
-    "    OLS regression class that computes coefficients, standard errors,\n",
-    "    t-stats, and p-values using only numpy, pandas, and math (no SciPy).\n",
+    "    OLS regression that returns coefficient, standard_error, t_stat, p_value for each regressor.\n",
+    "    - No SciPy required. Includes a Student-t CDF via incomplete-beta continued fraction.\n",
+    "    - x, y must be pandas DataFrames (y with exactly one column).\n",
+    "    - If create_intercept is True, adds an 'intercept' column as the first column.\n",
+    "    - .ols_regression() populates self.results (full precision)\n",
+    "    - .summary() returns a DataFrame with the requested column names (rounded for display).\n",
     "    \"\"\"\n",
     "\n",
     "    def __init__(self, x, y, create_intercept=True, regression_type=\"ols\"):\n",
-    "        # Keep references exactly as passed (some graders assert this)\n",
     "        self.x = x\n",
     "        self.y = y\n",
     "        self.create_intercept = bool(create_intercept)\n",
     "        self.regression_type = str(regression_type).lower()\n",
     "        self.results = {}\n",
-    "\n",
-    "        # Add intercept column if requested\n",
     "        if self.create_intercept:\n",
     "            self.add_intercept()\n",
     "\n",
     "    def add_intercept(self):\n",
-    "        \"\"\"Add a column of ones named 'intercept' as the first column (if missing).\"\"\"\n",
     "        if not isinstance(self.x, pd.DataFrame):\n",
     "            raise TypeError(\"x must be a pandas DataFrame.\")\n",
     "        if \"intercept\" not in self.x.columns:\n",
     "            self.x.insert(0, \"intercept\", 1.0)\n",
     "        return self\n",
     "\n",
-    "    def _p_values_from_t(self, t_vals):\n",
-    "        \"\"\"Compute two-tailed p-values using normal approximation (no SciPy).\"\"\"\n",
-    "        t = np.abs(np.asarray(t_vals, dtype=float))\n",
-    "        phi = 0.5 * (1.0 + np.vectorize(lambda z: math.erf(z / math.sqrt(2.0)))(t))\n",
-    "        return 2.0 * (1.0 - phi)\n",
+    "    # -------- Student-t utilities (no SciPy) --------\n",
+    "    def _betacf(self, a, b, x, max_iter=200, eps=3e-12):\n",
+    "        \"\"\"Continued fraction for incomplete beta (Abramowitz & Stegun 26.5.8).\"\"\"\n",
+    "        am = 1.0\n",
+    "        bm = 1.0\n",
+    "        az = 1.0\n",
+    "        qab = a + b\n",
+    "        qap = a + 1.0\n",
+    "        qam = a - 1.0\n",
+    "        bz = 1.0 - (qab * x / qap)\n",
+    "        for m in range(1, max_iter + 1):\n",
+    "            em = float(m)\n",
+    "            tem = em + em\n",
+    "            d = (em * (b - em) * x) / ((qam + tem) * (a + tem))\n",
+    "            ap = az + d * am\n",
+    "            bp = bz + d * bm\n",
+    "            d = -((a + em) * (qab + em) * x) / ((a + tem) * (qap + tem))\n",
+    "            app = ap + d * az\n",
+    "            bpp = bp + d * bz\n",
+    "            aold = az\n",
+    "            am, bm, az, bz = ap / bpp, bp / bpp, app / bpp, 1.0\n",
+    "            if abs(az - aold) < eps * abs(az):\n",
+    "                return az\n",
+    "        return az\n",
     "\n",
+    "    def _incbeta(self, a, b, x):\n",
+    "        \"\"\"Regularized incomplete beta I_x(a,b).\"\"\"\n",
+    "        if x <= 0.0:\n",
+    "            return 0.0\n",
+    "        if x >= 1.0:\n",
+    "            return 1.0\n",
+    "        # front factor\n",
+    "        bt = math.exp(\n",
+    "            math.lgamma(a + b) - math.lgamma(a) - math.lgamma(b)\n",
+    "            + a * math.log(x) + b * math.log(1.0 - x)\n",
+    "        )\n",
+    "        if x < (a + 1.0) / (a + b + 2.0):\n",
+    "            return bt * self._betacf(a, b, x) / a\n",
+    "        else:\n",
+    "            return 1.0 - bt * self._betacf(b, a, 1.0 - x) / b\n",
+    "\n",
+    "    def _t_cdf(self, t, df):\n",
+    "        \"\"\"\n",
+    "        CDF of Student's t with df degrees of freedom.\n",
+    "        Uses relation to regularized incomplete beta:\n",
+    "            F(t) = 1 - 0.5 * I_{df/(df + t^2)}(df/2, 1/2)  for t >= 0\n",
+    "            F(t) = 0.5 * I_{df/(df + t^2)}(df/2, 1/2)      for t < 0\n",
+    "        \"\"\"\n",
+    "        x = df / (df + t * t)\n",
+    "        a = df / 2.0\n",
+    "        b = 0.5\n",
+    "        ib = self._incbeta(a, b, x)\n",
+    "        return 1.0 - 0.5 * ib if t >= 0.0 else 0.5 * ib\n",
+    "\n",
+    "    def _p_values_from_t(self, t_vals, df):\n",
+    "        \"\"\"Two-sided p-values from Student-t with df degrees of freedom.\"\"\"\n",
+    "        t_vals = np.asarray(t_vals, dtype=float)\n",
+    "        # vectorize _t_cdf\n",
+    "        cdf_vec = np.vectorize(lambda z: self._t_cdf(z, df))\n",
+    "        cdfs = cdf_vec(t_vals)\n",
+    "        # two-sided p = 2 * min(F, 1-F) = 2 * (1 - F(|t|))\n",
+    "        cdfs_abs = cdf_vec(np.abs(t_vals))\n",
+    "        return 2.0 * (1.0 - cdfs_abs)\n",
+    "\n",
+    "    # -------------- OLS core ----------------\n",
     "    def ols_regression(self):\n",
-    "        \"\"\"Perform ordinary least squares regression.\"\"\"\n",
     "        if self.regression_type != \"ols\":\n",
     "            if self.regression_type == \"logit\":\n",
     "                raise NotImplementedError(\"Logit not required this week.\")\n",
@@ -1092,9 +1151,8 @@
     "        if self.y.shape[1] != 1:\n",
     "            raise ValueError(\"y must have exactly one column.\")\n",
     "\n",
-    "        X = self.x.to_numpy(dtype=float)\n",
-    "        y = self.y.to_numpy(dtype=float).reshape(-1, 1)\n",
-    "\n",
+    "        X = self.x.to_numpy(dtype=float)                 # (n, k)\n",
+    "        y = self.y.to_numpy(dtype=float).reshape(-1, 1)  # (n, 1)\n",
     "        n, k = X.shape\n",
     "        if y.shape[0] != n:\n",
     "            raise ValueError(\"x and y must have the same number of rows.\")\n",
@@ -1107,7 +1165,7 @@
     "        except np.linalg.LinAlgError:\n",
     "            XtX_inv = np.linalg.pinv(XtX)\n",
     "\n",
-    "        beta = XtX_inv @ (X.T @ y)\n",
+    "        beta = XtX_inv @ (X.T @ y)     # (k,1)\n",
     "        y_hat = X @ beta\n",
     "        resid = y - y_hat\n",
     "        dof = n - k\n",
@@ -1117,23 +1175,24 @@
     "\n",
     "        with np.errstate(divide=\"ignore\", invalid=\"ignore\"):\n",
     "            t_stats = (beta / se).flatten()\n",
-    "        p_vals = self._p_values_from_t(t_stats)\n",
     "\n",
-    "        self.results = {}\n",
+    "        p_vals = self._p_values_from_t(t_stats, df=dof)\n",
+    "\n",
+    "        # package\n",
+    "        out = {}\n",
     "        for i, col in enumerate(self.x.columns):\n",
-    "            self.results[col] = {\n",
+    "            out[col] = {\n",
     "                \"coefficient\": float(beta[i, 0]),\n",
     "                \"standard_error\": float(se[i, 0]),\n",
     "                \"t_stat\": float(t_stats[i]),\n",
     "                \"p_value\": float(p_vals[i]),\n",
     "            }\n",
+    "        self.results = out\n",
     "        return self\n",
     "\n",
     "    def summary(self):\n",
-    "        \"\"\"Return a DataFrame with rounded regression results.\"\"\"\n",
     "        if not self.results:\n",
     "            self.ols_regression()\n",
-    "\n",
     "        rows = []\n",
     "        for var in self.x.columns:\n",
     "            r = self.results[var]\n",
