--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -30,12 +30,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "7bc63035-9187-4bea-bf8a-46498f0377e0",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def dotProd(v1, v2): # Define our function and arguments\n",
     "    if len(v1) is len(v2): # Test equality of vector length\n",
@@ -129,12 +140,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "9ce1941e-8b57-4d31-99d6-a1dbd70fac8b",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[16], [38]]"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def matMul(a, b): # Define function, take 2 matrices\n",
     "    for i in range(len(a)): # Make sure a is matrix\n",
@@ -212,10 +234,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "7c0c3c30-45dc-49d2-9074-5c4e1b15042c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3, 4])"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy as np # import library as np object\n",
     "\n",
@@ -234,10 +267,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "5fe1b172-8270-46f4-86e0-f7984f39ee95",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4,)"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "myArray.shape"
    ]
@@ -260,39 +304,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "e540cddb-1987-4c87-9da9-0e58a396b7a9",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3, 4])"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.array([1,2,3,4]) # Specify each element"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "ba7a850e-5be8-45d7-a491-0c27af1b55c4",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0., 0.],\n",
+       "       [0., 0., 0.],\n",
+       "       [0., 0., 0.]])"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.zeros((3,3)) # Generate 3 x 3 array of zeros"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "0d47ddb0-74c6-4ff2-bcb1-137ff2e3c03b",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0., 0.],\n",
+       "       [0., 1., 0.],\n",
+       "       [0., 0., 1.]])"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.eye(3) # Generate 3 x 3 identity matrix"
    ]
@@ -330,10 +411,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "4c68f8f9-775f-45eb-99e9-f88e8db72ac4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4,)"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "myArray = np.array([1,2,3,4]) # Specify each element\n",
     "np.shape(myArray)"
@@ -349,10 +441,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "c7499e20-4653-4098-8cea-f392d3bd7c15",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 4)"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "myArray = np.array([[1,2,3,4]])\n",
     "np.shape(myArray)"
@@ -368,10 +471,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "19486a06-319e-4568-91de-d4631154242c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2],\n",
+       "       [3, 4]])"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "myArray.reshape((2,2)) # transform to square matrix"
    ]
@@ -386,10 +501,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "0889d245-c6f7-4595-bd9c-6b57caca95f1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1],\n",
+       "       [2],\n",
+       "       [3],\n",
+       "       [4]])"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "myArray.reshape((4,1)) # transform to column vector"
    ]
@@ -404,10 +533,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "03f64469-20c4-4328-9b55-000bc26ff169",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1],\n",
+       "       [2],\n",
+       "       [3],\n",
+       "       [4]])"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "myArray = np.array([[1,2,3,4]])\n",
     "myArray.T # transposes the array if 2-D"
@@ -427,10 +570,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "8c8510d3-a0d6-4a21-9e32-d8fb03410293",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2, 3, 4, 5])"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "myArray = np.array([1,2,3,4])\n",
     "newArray = np.array(myArray) + 1\n",
@@ -447,10 +601,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "82421852-4d2d-45b9-b5cb-5d1d3fa06112",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-1, -1, -1, -1])"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "myArray - newArray # must have same shape"
    ]
@@ -465,10 +630,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "72c4ec09-340a-42da-8493-419b7f07c596",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(30)"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "myArray.T.dot(myArray) # to get 4 x 4 product"
    ]
@@ -483,10 +659,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "0059c6f1-d5b7-461f-ba44-12f46c088523",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(30)"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "myArray.T @ myArray # '@' only works in python >=3.5"
    ]
@@ -507,10 +694,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "ea111480-e1e7-4316-9e3f-401551928601",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(32)"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def squareFunc(a=1, b=1, c=1, x=1):\n",
     "    coef = np.array([a, b, c])\n",
@@ -554,10 +752,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "2c05b940-bb54-45e0-b82e-65c8e76a8b78",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9622905223928883"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "np.random.rand() # Generates a single value"
@@ -565,20 +774,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "918b11fd-2173-4112-944c-ec5a2cb8d8a3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.88577947, 0.24891028, 0.70409095])"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.random.rand(3) # Array of 3 random values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "0f272f0a-853d-49ef-993c-1972522a20db",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.41054369, 0.34269675, 0.57124639, 0.36631163, 0.62968349],\n",
+       "       [0.56748146, 0.60394688, 0.31745699, 0.39919446, 0.0161555 ],\n",
+       "       [0.15488356, 0.24720705, 0.3860117 , 0.71158445, 0.52898748],\n",
+       "       [0.30919418, 0.8410508 , 0.20619002, 0.49865225, 0.9820392 ],\n",
+       "       [0.41682617, 0.56371994, 0.56080841, 0.76817318, 0.43515758]])"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.random.rand(5,5) # Create a 5 x 5 matrix of random numbers"
    ]
@@ -600,10 +835,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "9e4b54bd-fff3-452b-ac80-2207408d62cc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[np.float64(0.9921320160907564),\n",
+       " np.float64(0.45647858859698476),\n",
+       " np.float64(0.21048903876928968),\n",
+       " np.float64(0.7169446587515637),\n",
+       " np.float64(0.06379702475947534),\n",
+       " np.float64(0.8016317007653327),\n",
+       " np.float64(1.1754695392071906),\n",
+       " np.float64(0.016757310811785008),\n",
+       " np.float64(2.3108085724598157),\n",
+       " np.float64(0.08040992562225367)]"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def expD(x): # Define my function\n",
     "    if isinstance(x, float) | isinstance(x, int): # Test if argument is list or not\n",
@@ -637,10 +892,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "21af548c-c47e-4fd4-bcc6-a3bcdcfbe90b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'full_data_name' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)\n",
+      "Cell \u001b[0;32mIn[23], line 1\u001b[0m\n",
+      "\u001b[0;32m----> 1\u001b[0m sampled_data \u001b[38;5;241m=\u001b[39m \u001b[43mfull_data_name\u001b[49m\u001b[38;5;241m.\u001b[39msample(\u001b[38;5;241m10000\u001b[39m, replace\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m) \u001b[38;5;66;03m# Don't run, we don't have any data loaded. :)\u001b[39;00m\n",
+      "\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'full_data_name' is not defined"
+     ]
+    }
+   ],
    "source": [
     "sampled_data = full_data_name.sample(10000, replace=False) # Don't run, we don't have any data loaded. :)"
    ]
@@ -753,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
    "metadata": {},
    "outputs": [],
@@ -766,25 +1035,29 @@
     "\n",
     "class RegressionModel:\n",
     "    \"\"\"\n",
-    "    OLS regression class that computes, for each variable (including 'intercept' when requested):\n",
-    "      - coefficient\n",
-    "      - standard_error\n",
-    "      - t_stat\n",
-    "      - p_value   (two-sided, from Student-t with df = n - k)\n",
-    "    Results are stored in self.results and summary() returns a DataFrame\n",
-    "    with columns: 'Variable name', 'coefficient value', 'standard error', 't-statistic', 'p-value'.\n",
-    "    No SciPy is required.\n",
+    "    OLS regression class that computes, for each regressor:\n",
+    "      - coefficient, standard_error, t_stat, p_value (two-sided, df = n-k)\n",
+    "    Accepts array-like or pandas inputs and coerces to DataFrames.\n",
+    "    Stores results in self.results; summary() returns the requested table.\n",
     "    \"\"\"\n",
     "\n",
     "    def __init__(self, x, y, create_intercept=True, regression_type=\"ols\"):\n",
-    "        # Per spec: x and y should be DataFrames; keep references as-is\n",
-    "        if not isinstance(x, pd.DataFrame) or not isinstance(y, pd.DataFrame):\n",
-    "            raise TypeError(\"x and y must be pandas DataFrames.\")\n",
-    "        if y.shape[1] != 1:\n",
-    "            raise ValueError(\"y must have exactly one column.\")\n",
+    "        # Coerce x to DataFrame (preserve column names if possible)\n",
+    "        if isinstance(x, pd.DataFrame):\n",
+    "            Xdf = x.copy()\n",
+    "        else:\n",
+    "            Xdf = pd.DataFrame(x)\n",
     "\n",
-    "        self.x = x\n",
-    "        self.y = y\n",
+    "        # Coerce y to single-column DataFrame\n",
+    "        if isinstance(y, pd.DataFrame):\n",
+    "            if y.shape[1] != 1:\n",
+    "                raise ValueError(\"y must have exactly one column.\")\n",
+    "            Ydf = y.copy()\n",
+    "        else:\n",
+    "            Ydf = pd.DataFrame(np.asarray(y).reshape(-1, 1), columns=[\"y\"])\n",
+    "\n",
+    "        self.x = Xdf\n",
+    "        self.y = Ydf\n",
     "        self.create_intercept = bool(create_intercept)\n",
     "        self.regression_type = str(regression_type).lower()\n",
     "        self.results = {}\n",
@@ -837,7 +1110,6 @@
     "            return 1.0 - bt * self._betacf(b, a, 1.0 - x) / b\n",
     "\n",
     "    def _t_cdf(self, t, df):\n",
-    "        # F(t) = 1 - 0.5 * I_{df/(df + t^2)}(df/2, 1/2) for t>=0; otherwise 0.5 * I\n",
     "        x = df / (df + t * t)\n",
     "        a = df / 2.0\n",
     "        b = 0.5\n",
@@ -871,18 +1143,16 @@
     "        except np.linalg.LinAlgError:\n",
     "            XtX_inv = np.linalg.pinv(XtX)\n",
     "\n",
-    "        beta = XtX_inv @ (X.T @ y)         # (k,1)\n",
+    "        beta = XtX_inv @ (X.T @ y)\n",
     "        y_hat = X @ beta\n",
     "        resid = y - y_hat\n",
-    "        dof = n - k                         # degrees of freedom\n",
-    "\n",
+    "        dof = n - k\n",
     "        sigma2 = float((resid.T @ resid) / dof)\n",
     "        var_beta = sigma2 * XtX_inv\n",
     "        se = np.sqrt(np.diag(var_beta)).reshape(-1, 1)\n",
     "\n",
     "        with np.errstate(divide=\"ignore\", invalid=\"ignore\"):\n",
     "            t_stats = (beta / se).flatten()\n",
-    "\n",
     "        p_vals = self._p_values_from_t(t_stats, df=dof)\n",
     "\n",
     "        self.results = {}\n",
@@ -899,7 +1169,7 @@
     "        if not self.results:\n",
     "            self.ols_regression()\n",
     "        rows = []\n",
-    "        for var in self.x.columns:  # keep original order\n",
+    "        for var in self.x.columns:\n",
     "            r = self.results[var]\n",
     "            rows.append({\n",
     "                \"Variable name\": var,\n",
@@ -908,8 +1178,7 @@
     "                \"t-statistic\": r[\"t_stat\"],\n",
     "                \"p-value\": r[\"p_value\"],\n",
     "            })\n",
-    "        return pd.DataFrame(rows)\n",
-    "\n"
+    "        return pd.DataFrame(rows)\n"
    ]
   }
  ],
