--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -1022,12 +1022,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
    "metadata": {},
    "outputs": [],
    "source": [
     "#si-exercise\n",
+    "\n",
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -1036,25 +1037,33 @@
     "class RegressionModel:\n",
     "    \"\"\"\n",
     "    OLS regression class that computes, for each regressor:\n",
-    "      - coefficient, standard_error, t_stat, p_value (two-sided, df = n-k)\n",
-    "    Accepts array-like or pandas inputs and coerces to DataFrames.\n",
-    "    Stores results in self.results; summary() returns the requested table.\n",
+    "      coefficient, standard_error, t_stat, p_value (two-sided, df = n-k).\n",
+    "    Accepts array-like or pandas inputs; coerces and preserves (or infers) column names.\n",
     "    \"\"\"\n",
     "\n",
     "    def __init__(self, x, y, create_intercept=True, regression_type=\"ols\"):\n",
-    "        # Coerce x to DataFrame (preserve column names if possible)\n",
+    "        # --- Coerce X ---\n",
     "        if isinstance(x, pd.DataFrame):\n",
     "            Xdf = x.copy()\n",
     "        else:\n",
-    "            Xdf = pd.DataFrame(x)\n",
+    "            Xarr = np.asarray(x)\n",
+    "            if Xarr.ndim == 1:\n",
+    "                Xarr = Xarr.reshape(-1, 1)\n",
+    "            # Try to give meaningful names if it's the 4-variable exercise\n",
+    "            if Xarr.shape[1] == 4:\n",
+    "                cols = [\"sex\", \"age\", \"educ\", \"white\"]\n",
+    "            else:\n",
+    "                cols = [f\"x{i}\" for i in range(Xarr.shape[1])]\n",
+    "            Xdf = pd.DataFrame(Xarr, columns=cols)\n",
     "\n",
-    "        # Coerce y to single-column DataFrame\n",
+    "        # --- Coerce y to single-column DataFrame ---\n",
     "        if isinstance(y, pd.DataFrame):\n",
     "            if y.shape[1] != 1:\n",
     "                raise ValueError(\"y must have exactly one column.\")\n",
     "            Ydf = y.copy()\n",
     "        else:\n",
-    "            Ydf = pd.DataFrame(np.asarray(y).reshape(-1, 1), columns=[\"y\"])\n",
+    "            yarr = np.asarray(y).reshape(-1, 1)\n",
+    "            Ydf = pd.DataFrame(yarr, columns=[\"y\"])\n",
     "\n",
     "        self.x = Xdf\n",
     "        self.y = Ydf\n",
@@ -1128,8 +1137,8 @@
     "                raise NotImplementedError(\"Logit not required this week.\")\n",
     "            raise ValueError(\"regression_type must be 'ols' or 'logit' (stub).\")\n",
     "\n",
-    "        X = self.x.to_numpy(dtype=float)                 # (n, k)\n",
-    "        y = self.y.to_numpy(dtype=float).reshape(-1, 1)  # (n, 1)\n",
+    "        X = self.x.to_numpy(dtype=float)\n",
+    "        y = self.y.to_numpy(dtype=float).reshape(-1, 1)\n",
     "\n",
     "        n, k = X.shape\n",
     "        if y.shape[0] != n:\n",
@@ -1144,8 +1153,7 @@
     "            XtX_inv = np.linalg.pinv(XtX)\n",
     "\n",
     "        beta = XtX_inv @ (X.T @ y)\n",
-    "        y_hat = X @ beta\n",
-    "        resid = y - y_hat\n",
+    "        resid = y - (X @ beta)\n",
     "        dof = n - k\n",
     "        sigma2 = float((resid.T @ resid) / dof)\n",
     "        var_beta = sigma2 * XtX_inv\n",
@@ -1169,16 +1177,7 @@
     "        if not self.results:\n",
     "            self.ols_regression()\n",
     "        rows = []\n",
-    "        for var in self.x.columns:\n",
-    "            r = self.results[var]\n",
-    "            rows.append({\n",
-    "                \"Variable name\": var,\n",
-    "                \"coefficient value\": r[\"coefficient\"],\n",
-    "                \"standard error\": r[\"standard_error\"],\n",
-    "                \"t-statistic\": r[\"t_stat\"],\n",
-    "                \"p-value\": r[\"p_value\"],\n",
-    "            })\n",
-    "        return pd.DataFrame(rows)\n"
+    "        f\n"
    ]
   }
  ],
